# hotel-booking

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: config.py  database.py  main.py
app/bookings/: models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: models.py
app/migrations/: env.py
app/migrations/versions/: 79f0e6e82c7b_initial_migration.py  984db7ae4e95_add_3_new_tables.py  f5df3a806b13_add_4_tables.py
app/rooms/: models.py
app/users/: models.py
